crates/core/tests/ui/typed_macro/fail/verify_live_row_mismatch.stderr
error: compile-time SQL verification schema mismatch: referenced authored schema column `public.verify_live_users.name` has database type text (oid 25) but the authored schema expects int4 (oid 23)
  --> tests/ui/typed_macro/fail/verify_live_row_mismatch.rs:10:9
   |
10 |         SELECT verify_live_users.id, verify_live_users.name FROM public.verify_live_users WHERE verify_live_users.id = $id
   |         ^^^^^^
